réponses/tp2/wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: tp1
spec:
  selector:
    app: wordpress
  ports:
    - port: 80
      targetPort: 80
